// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Display /> should render Display with color 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <Text
    accessibilityRole="header"
    accessible={true}
    color="surface.text.subtle.highContrast"
    data-blade-component="display"
    fontFamily="text"
    fontSize={1100}
    fontStyle="normal"
    fontWeight="bold"
    lineHeight={900}
    style={
      [
        {
          "color": "hsla(220, 30%, 96%, 1)",
          "fontFamily": "Lato",
          "fontSize": 40,
          "fontStyle": "normal",
          "fontWeight": "700",
          "lineHeight": 48,
          "marginBottom": 0,
          "marginLeft": 0,
          "marginRight": 0,
          "marginTop": 0,
          "paddingBottom": 0,
          "paddingLeft": 0,
          "paddingRight": 0,
          "paddingTop": 0,
          "textDecorationLine": "none",
        },
      ]
    }
  >
    Displaying Landing Page Display
  </Text>
</View>
`;

exports[`<Display /> should render Display with default properties 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <Text
    accessibilityRole="header"
    accessible={true}
    color="surface.text.normal.lowContrast"
    data-blade-component="display"
    fontFamily="text"
    fontSize={1100}
    fontStyle="normal"
    fontWeight="bold"
    lineHeight={900}
    style={
      [
        {
          "color": "hsla(217, 56%, 17%, 1)",
          "fontFamily": "Lato",
          "fontSize": 40,
          "fontStyle": "normal",
          "fontWeight": "700",
          "lineHeight": 48,
          "marginBottom": 0,
          "marginLeft": 0,
          "marginRight": 0,
          "marginTop": 0,
          "paddingBottom": 0,
          "paddingLeft": 0,
          "paddingRight": 0,
          "paddingTop": 0,
          "textDecorationLine": "none",
        },
      ]
    }
  >
    Displaying Landing Screen Display
  </Text>
</View>
`;

exports[`<Display /> should render Display with mixed color 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <Text
    accessibilityRole="header"
    accessible={true}
    color="surface.text.normal.lowContrast"
    data-blade-component="display"
    fontFamily="text"
    fontSize={1100}
    fontStyle="normal"
    fontWeight="bold"
    lineHeight={900}
    style={
      [
        {
          "color": "hsla(217, 56%, 17%, 1)",
          "fontFamily": "Lato",
          "fontSize": 40,
          "fontStyle": "normal",
          "fontWeight": "700",
          "lineHeight": 48,
          "marginBottom": 0,
          "marginLeft": 0,
          "marginRight": 0,
          "marginTop": 0,
          "paddingBottom": 0,
          "paddingLeft": 0,
          "paddingRight": 0,
          "paddingTop": 0,
          "textDecorationLine": "none",
        },
      ]
    }
  >
    Supercharge your business with the all‑powerful
     
    <Text
      accessibilityRole="header"
      accessible={true}
      color="feedback.information.action.text.primary.default.lowContrast"
      data-blade-component="display"
      fontFamily="text"
      fontSize={1100}
      fontStyle="normal"
      fontWeight="bold"
      lineHeight={900}
      style={
        [
          {
            "color": "hsla(195, 100%, 31%, 1)",
            "fontFamily": "Lato",
            "fontSize": 40,
            "fontStyle": "normal",
            "fontWeight": "700",
            "lineHeight": 48,
            "marginBottom": 0,
            "marginLeft": 0,
            "marginRight": 0,
            "marginTop": 0,
            "paddingBottom": 0,
            "paddingLeft": 0,
            "paddingRight": 0,
            "paddingTop": 0,
            "textDecorationLine": "none",
          },
        ]
      }
    >
      Payment Gateway
    </Text>
  </Text>
</View>
`;

exports[`<Display /> should render Display with variant "large" 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <Text
    accessibilityRole="header"
    accessible={true}
    color="surface.text.normal.lowContrast"
    data-blade-component="display"
    fontFamily="text"
    fontSize={1300}
    fontStyle="normal"
    fontWeight="bold"
    lineHeight={1100}
    style={
      [
        {
          "color": "hsla(217, 56%, 17%, 1)",
          "fontFamily": "Lato",
          "fontSize": 56,
          "fontStyle": "normal",
          "fontWeight": "700",
          "lineHeight": 64,
          "marginBottom": 0,
          "marginLeft": 0,
          "marginRight": 0,
          "marginTop": 0,
          "paddingBottom": 0,
          "paddingLeft": 0,
          "paddingRight": 0,
          "paddingTop": 0,
          "textDecorationLine": "none",
        },
      ]
    }
  >
    Displaying Landing Screen Display
  </Text>
</View>
`;

exports[`<Display /> should render Display with variant "medium" 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <Text
    accessibilityRole="header"
    accessible={true}
    color="surface.text.normal.lowContrast"
    data-blade-component="display"
    fontFamily="text"
    fontSize={1200}
    fontStyle="normal"
    fontWeight="bold"
    lineHeight={1000}
    style={
      [
        {
          "color": "hsla(217, 56%, 17%, 1)",
          "fontFamily": "Lato",
          "fontSize": 48,
          "fontStyle": "normal",
          "fontWeight": "700",
          "lineHeight": 56,
          "marginBottom": 0,
          "marginLeft": 0,
          "marginRight": 0,
          "marginTop": 0,
          "paddingBottom": 0,
          "paddingLeft": 0,
          "paddingRight": 0,
          "paddingTop": 0,
          "textDecorationLine": "none",
        },
      ]
    }
  >
    Displaying Landing Screen Display
  </Text>
</View>
`;

exports[`<Display /> should render Display with variant "small" 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <Text
    accessibilityRole="header"
    accessible={true}
    color="surface.text.normal.lowContrast"
    data-blade-component="display"
    fontFamily="text"
    fontSize={1100}
    fontStyle="normal"
    fontWeight="bold"
    lineHeight={900}
    style={
      [
        {
          "color": "hsla(217, 56%, 17%, 1)",
          "fontFamily": "Lato",
          "fontSize": 40,
          "fontStyle": "normal",
          "fontWeight": "700",
          "lineHeight": 48,
          "marginBottom": 0,
          "marginLeft": 0,
          "marginRight": 0,
          "marginTop": 0,
          "paddingBottom": 0,
          "paddingLeft": 0,
          "paddingRight": 0,
          "paddingTop": 0,
          "textDecorationLine": "none",
        },
      ]
    }
  >
    Displaying Landing Screen Display
  </Text>
</View>
`;

exports[`<Display /> should render Display with variant "small" and contrast "high" 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <Text
    accessibilityRole="header"
    accessible={true}
    color="surface.text.normal.highContrast"
    data-blade-component="display"
    fontFamily="text"
    fontSize={1100}
    fontStyle="normal"
    fontWeight="bold"
    lineHeight={900}
    style={
      [
        {
          "color": "hsla(0, 0%, 100%, 1)",
          "fontFamily": "Lato",
          "fontSize": 40,
          "fontStyle": "normal",
          "fontWeight": "700",
          "lineHeight": 48,
          "marginBottom": 0,
          "marginLeft": 0,
          "marginRight": 0,
          "marginTop": 0,
          "paddingBottom": 0,
          "paddingLeft": 0,
          "paddingRight": 0,
          "paddingTop": 0,
          "textDecorationLine": "none",
        },
      ]
    }
  >
    Displaying Landing Screen Display
  </Text>
</View>
`;

exports[`<Display /> should render Display with variant "xlarge" 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <Text
    accessibilityRole="header"
    accessible={true}
    color="surface.text.normal.lowContrast"
    data-blade-component="display"
    fontFamily="text"
    fontSize={1600}
    fontStyle="normal"
    fontWeight="bold"
    lineHeight={1500}
    style={
      [
        {
          "color": "hsla(217, 56%, 17%, 1)",
          "fontFamily": "Lato",
          "fontSize": 64,
          "fontStyle": "normal",
          "fontWeight": "700",
          "lineHeight": 72,
          "marginBottom": 0,
          "marginLeft": 0,
          "marginRight": 0,
          "marginTop": 0,
          "paddingBottom": 0,
          "paddingLeft": 0,
          "paddingRight": 0,
          "paddingTop": 0,
          "textDecorationLine": "none",
        },
      ]
    }
  >
    Displaying Landing Screen Display
  </Text>
</View>
`;
